Fix issue where view controls overlap.
* Fix missing key.

--- a/assets/stylesheets/components/stories/shared/view-controls/base.styl
+++ b/assets/stylesheets/components/stories/shared/view-controls/base.styl
@@ -11,6 +11,16 @@ $width-delta = $expanded-width - $collapsed-width
     right: 24px
     top: 12px
 
+    background-color: $white
+    box-shadow: 0 0 10px 10px $white
+
+    .control
+      display inline-block
+      vertical-align middle
+
+    .control + .control
+      margin-left: 10px
+
   .secondary-controls
     display: block
 
